Refactor StratumPopulationDef.toString() for improved code quality
Made several code quality improvements to the toString() implementation:

1. Hard-coded collection limit to 5 in limitCollection() method
   - Removed unnecessary int parameter since limit is always 5
   - Simplified method signature from limitCollection(collection, 5) to limitCollection(collection)

2. Modernized stream collection
   - Replaced .collect(Collectors.toList()) with .toList() in formatEvaluationResults()
   - Removed unused Collectors import

3. Added @Nonnull annotation to toString() method
   - Uses jakarta.annotation.Nonnull for consistency with project standards
   - Documents that toString() never returns null

These changes improve code readability and maintainability without altering functionality.
All existing tests continue to pass.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>